--- a/Exercises/Bloco_3/3.3/Trybe_marketing_3.3.html
+++ b/Exercises/Bloco_3/3.3/Trybe_marketing_3.3.html
@@ -11,12 +11,17 @@
 
 </head>
 <body>
+<div class="header">
+  <div class='header-content'>
   <h1  class="trybe_green">Sua carreira de sucesso em tecnologia começa aqui. Agora.</h1>
-  <img src="images/smiling-image.jpeg" alt="Homem sorrindo" width="400px">
+  
+    <div class="header-text">
+    <p>Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses. </p>
 
-  <p>Com atividades presenciais e online, mentorias individuais e desafios práticos, a Trybe é a escola do futuro e para o futuro que acelera sua carreira em desenvolvimento de software em até 12 meses. </p>
-
-  <p >E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração de, no mínimo, R$ 3.000,00 por mês.</strong></p>
+    <p >E o melhor? <strong>Você não paga nada até conseguir um trabalho com uma remuneração de, no mínimo, R$ 3.000,00 por mês.</strong></p>
+    </div>
+  </div>
+</div>
 
   <hr>
 
@@ -42,16 +47,6 @@
 
   <hr>
 
-  <h3 class="trybe_green section_title">Quem somos e por que estamos aqui?</h3>
-  <img class= "picture" src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bafbe8178d5be56113af_Matheus%20Goyas.jpeg" alt="Matheus Goys" width="100px">
-  <p>Fundamos a Trybe porque acreditamos que qualquer pessoa que tenha muita vontade de vencer, independente da formação ou da condição financeira, é capaz de ter uma carreira de sucesso.</p>
-  <h4 class="trybe_green testtimonial-name">Matheus Goyas,<br>CEO e Co-fundador da Trybe</h4>
-
-  <img class= "picture" src="https://uploads-ssl.webflow.com/5d4c18a28620ae5d4f33af94/5d82bb0b28a6013c896ebf4b_Joao%20Daniel.jpeg" alt="João Daniel" width="100px">
-  <p>Temos a premissa de fazer os estudantes viverem na prática desafios idênticos aos enfrentados na vida real. Nosso compromisso é tão grande com o sucesso, que a Trybe só ganha se os nossos estudantes estiverem ganhando bem.</p>
-  <h4  class="trybe_green testtimonial-name">João Duarte,<br>CTO e Co-fundador da Trybe</h4>
-
-  <hr>
 
   <h3 class="trybe_green section_title">Como é a formação?</h3>
   <ul class="paragraph_geral">
