Estiliza a parte final do site - footer

--- a/Exercises/Bloco_3/3.3/Trybe_marketing_3.3.html
+++ b/Exercises/Bloco_3/3.3/Trybe_marketing_3.3.html
@@ -35,7 +35,8 @@
 
     <p><strong>E QUE TENHA MUITA VONTADE E DEDICAÇÃO!</strong></p>
     </div>
-    
+    </div>
+
     <div class="student-testimonial-all"> 
       
       <div class="student-testimonial">
@@ -60,7 +61,9 @@
     </div>
   <hr>
 
+<div class ="learning">
 
+  <div class ="learning-left">
   <h3 class="trybe_green section_title">Como é a formação?</h3>
   <ul class="paragraph_geral">
     <li>Atividades <strong>online, offline e apoio individual</strong> para cada aluno</li>
@@ -68,9 +71,13 @@
     <li>Equipe dedicada a te ajudar a encontrar a <strong>oportunidade profissional perfeita para você</strong></li>
     <li>Vivência das <strong>rotinas e processos reais</strong> de desenvolvimento das <strong>empresas de ponta</strong></li>
   </ul>
-
-  <img src="images/learning-web.jpeg" alt="Pessoas interagindo com o notebook." width="600px">
-  <h4 class="trybe_green">Quer saber mais sobre nossa formação?</h4>
-  <a class="button" href="#" target="_blank">Faça o download do nosso currículo</a>
+  </div>
+  <img class="learning-right" src="images/learning-web.jpeg" alt="Pessoas interagindo com o notebook." width="600px">
+  
+    <div class="footer">
+    <h4 class="trybe_green">Quer saber mais sobre nossa formação?</h4>
+    <a class="button" href="#" target="_blank">Faça o download do nosso currículo</a>
+    </div>
+</div>
 </body>
 </html>
