--- a/Exercises/Bloco_4/4.1/Exemp_Aula/index.html
+++ b/Exercises/Bloco_4/4.1/Exemp_Aula/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <h1>Página para testes do Javascript</h1>
+
+
+
+  <script src="scripts.js"> </script>
+
   </body>
 </html>
