Atualiza os arquivos da aula

--- a/Exercises/Bloco_5_Java-Dom-Eventos-WebStorage/5.1/calendar.html
+++ b/Exercises/Bloco_5_Java-Dom-Eventos-WebStorage/5.1/calendar.html
@@ -17,12 +17,12 @@
       <ul class="week-days">
       </ul>
     </div>
-    <div class="days-container">
+    <div class="js-marcacao days-container">
       <ul id="days">
       </ul>
     </div>
     <button id="btn-holiday">Feriados</button>
-    <button id="btn-friday">Sextou</button>
+    <button id="btn-friday" onclick="mudaBotao()">Sextou</button>
     <script src="script.js"></script>
   </body>
 </html>
