--- a/Exercises/Bloco_5_Java-Dom-Eventos-WebStorage/5.2/calendar.html
+++ b/Exercises/Bloco_5_Java-Dom-Eventos-WebStorage/5.2/calendar.html
@@ -21,6 +21,14 @@
       <ul id="days">
       </ul>
     </div>
+
+    <section class='ingredients-section'>
+      <h2>Ingredientes</h2>]
+      <ul class=ingredients-list></ul>
+
+
+    </section>
+
     <!-- qualquer coisa -->
     <button id="btn-holiday">Feriados</button>
     <button id="btn-friday" onclick="mudaBotao()">Sextou</button>
